# msauth-browser

./: README.md  pyproject.toml
msauth_browser/: __main__.py  cli.py  console.py
msauth_browser/core/: auth.py
msauth_browser/src/: auth.py  config.py  logbook.py  tokens.py
src/msauth_browser/: __init__.py  cli.py
src/msauth_browser/core/: auth.py  logbook.py
