[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "msauth-browser"
version = "0.2.6"
description = "🎭 Extract Microsoft OAuth tokens using Playwright browser automation."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "pkce>=1.0.3",
    "playwright>=1.60.0",
    "pyperclip>=1.11.0",
]

[project.urls]
repository = "https://github.com/n3rada/msauth-browser"

[project.scripts]
msauth-browser = 'msauth_browser.cli:main'
playwright = 'playwright.__main__:main'

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

